# Chat-Server-Project

./: Cargo.toml  README.md  Sample Output Server.txt  Sample output Client.txt
client/: main.rs
server/src/: main.rs
